[project]
name = "claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "backoff>=2.2.1",
    "boto3>=1.42.63",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "litellm>=1.82.0",
    "orjson>=3.11.7",
    "pydantic[email]",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
]
